解决跨域问题。但是好像不需要在这里改。

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <title>Waves</title>
+<meta http-equiv="Access-Control-Allow-Origin" content="*">
+<header name = "Access-Control-Allow-Origin" value = "*" />
+
 <link rel="stylesheet" type="text/css" href="main.css" />
 
 <script id="splash-vertex-shader" type="x-shader/x-vertex">
